    not valid: avx5124fmaps)
  [31798] pidfd_getpid.c is miscompiled by GCC 6.4
  [31867] build: "CPU ISA level is lower than required" on SSE2-free
    CPUs
  [31883] build: ISA level support configure check relies on bashism /
    is otherwise broken for arithmetic
  [31890] resolv: Allow short error responses to match any DNS query
  [31965] rseq extension mechanism does not work as intended
  [31968] mremap implementation in C does not handle arguments correctly
  [32026] strerror/strsignal TLS not handled correctly for secondary namespaces
  [32052] Name space violation in fortify wrappers
  [32137] libio: Attempt wide backup free only for non-legacy code
  [32231] elf: Change ldconfig auxcache magic number
  [32470] x86: Avoid integer truncation with large cache sizes
  [32582] Fix underallocation of abort_msg_s struct (CVE-2025-0395)
  [32810] Crash on x86-64 if XSAVEC disable via tunable
  [32987] elf: Fix subprocess status handling for tst-dlopen-sgid
  [33185] Fix double-free after allocation failure in regcomp

Version 2.39

Major new features:

* A new tunable, glibc.cpu.plt_rewrite, can be used to enable PLT
  rewrite on x86-64.  When enabled with non-lazy binding, the dynamic
  linker will rewrite indirect branches in PLT with direct branches.

* Sync with Linux kernel 6.6 shadow stack interface.  The --enable-cet
  configure option is only supported on x86-64.

* struct statvfs now has an f_type member, equal to the f_type statfs member;
  on the Hurd this was always available under a reserved name,
  and under Linux a spare has been allocated: it was always zero
  in previous versions of glibc, and zero is not a valid result.

* On Linux, the functions posix_spawnattr_getcgroup_np and
  posix_spawnattr_setcgroup_np have been added, along with the
  POSIX_SPAWN_SETCGROUP flag.  They allow posix_spawn and posix_spawnp
  to set the cgroupv2 in the new process in a race-free manner.  These